package com.trihieu.model;
public class MineralWater extends Product {
    public MineralWater(int quantity) { super("Nước Khoáng", 25000.0, quantity); }
}
