package com.trihieu.model;

public class SoftDrink extends Product {
    public SoftDrink(int quantity) { super("Nước Ngọt", 50000.0, quantity); }
}
