package com.trihieu.model;

public class Tea extends Product {
    public Tea(int quantity) { super("Trà", 37500.0, quantity); }
}
