package com.trihieu.observer;
public interface VendingMachineObserver {
    void update(String message);
}
